# alakazam-mira-mini

./: .gitignore  README.md  pyproject.toml
alakazam_mira/: cli.py  local_app.py  ui  weights.py
docs/: physics_verification.md
probe_eval/: README.md  __init__.py  activations.py  batching.py  convert_dinov3_hf_to_hub.py  extract_sequences.py  loading.py  long_rollout_analysis.py  mp_crossview.py  prehead_rescore.py  probe.py  rescore.py  rollout_eval.py  run_long_rollouts.sh  smoke.py  targets.py  train_prehead_probe.py  train_probe.py
probe_eval/tests/: test_probe.py  test_targets.py
